# zipmonkey

./: .gitignore  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  MANIFEST.in  README.md  RELEASE_NOTES.md  RELEASE_READINESS.md  REVIEW_HISTORY.md  SKILL.md  pyproject.toml  release_readiness.json
.github/workflows/: ci.yml
review-kit/: LIMITATIONS.template.md  README.md  REVIEW_HISTORY.template.md  ci.template.yml  panel_prompt.template.md  release_readiness.template.json
review-kit/scripts/: readiness.py
src/zipmonkey/: __init__.py  archive.py  artifacts.py  cli.py  detect.py  extract.py  inspect.py  models.py  safety.py  walk.py
tests/: conftest.py  test_archive.py  test_artifacts.py  test_cli.py  test_detect.py  test_models.py  test_optional_backends.py  test_properties.py  test_safety.py
