[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zipmonkey"
version = "0.1.0"
description = "Smart archive inspection and extraction: OS-artifact cleanup, recursive unpacking, type detection, and selective extraction over ZIP/tar."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "RexBytes", email = "pythonic@rexbytes.com" }]
requires-python = ">=3.11"
keywords = ["zip", "tar", "archive", "extract", "unzip", "nested", "recursive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
sevenzip = ["py7zr>=0.20"]
rar = ["rarfile>=4.0"]
dev = ["pytest>=7.0", "pytest-cov", "hypothesis>=6.0"]

[project.scripts]
zipmonkey = "zipmonkey.cli:main"

[project.urls]
Homepage = "https://github.com/RexBytes/zipmonkey"
Issues   = "https://github.com/RexBytes/zipmonkey/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
